@@ -10,4 +10,3 @@
 * rework process_commandline_options function, auto-add all cmdline options with equal sign.
 * Add deleyed_block_devices option. Whenever resolv_device() does not find device, wait 1s and repeat, default repeat 30 times. Make the counter configurable.
 * rework lebuild, instead of passing cmd as chroot argument, deploy lebuild script inside, chroot and run lebuild from there.
-* Support bcache, like echo each block device and partition to register_quiet if bcache exist, or something.
