@@ -28,6 +28,7 @@ devel branch:
 	  initrds (Andrew Glinskiy)
 	- Show running hooks (Andrew Glinskiy)
 	- Lazy umount /dev/pts in case of ssh login inside initramfs.
+	- Bcache support, now can boot with rootfs on bcache block device.
 
 v0.8.0.1, 04-08-2013:
 	- Pass $PATH env variable to $init.
